# ovpn-admin

./: .gitignore  Cargo.toml  dev.pepper  rust-toolchain.toml
config/: dev.toml
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: AdminClients.svelte  Audit.svelte  CcdEditor.svelte  Dashboard.svelte  Login.svelte  Nav.svelte  Toaster.svelte
frontend/src/lib/: api.ts  hashRouter.ts  store.ts  toast.ts
migrations/: 0001_init.sql
src/: config.rs  main.rs  vpncertd.rs  web.rs
src/db/: mod.rs
src/http/: admin.rs  auth.rs  csrf.rs  guards.rs  mod.rs
src/openvpn/: mod.rs
src/security/: password.rs
var/: ovpn-admin.sqlite
webui-dist/: index.html
webui-dist/assets/: index-BGnH8IDO.css  index-CuIdt_jK.js
