[package]
name = "ovpn-admin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "=0.6.20"
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
tower-http = { version = "=0.4.4", features = ["trace","set-header"] }  # add set-header
tower = "0.4"                                                           # for ServiceBuilder

tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

anyhow = "1"
thiserror = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls","sqlite","macros","migrate"] }

argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
time = "0.3"
ulid = "1"
config = "0.14"

clap = { version = "4", features = ["derive"] }
rpassword = "7"
cookie = "0.18"
base64 = "0.22"
regex = "1.11.1"
tokio-util = { version = "0.7.16", features = ["io"] }
tempfile = "3"
